fix back button behind slider

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -447,6 +447,7 @@ margin-left: auto;
   height: 100%!important;
 }
 .back-button{
+  z-index: 4;
   right: 1rem;
 }
 
